// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Testing Summary Components testing Section should render correctly 1`] = `
<div>
  <div
    class="rac-summary-section"
  >
    <div
      class="rac-summary-section-detail"
    >
      <div
        class="rac-summary-section-title"
      >
        Title
      </div>
      <div
        class="rac-summary-section-description"
      >
        description
      </div>
    </div>
  </div>
</div>
`;

exports[`Testing Summary Components testing Separator should render correctly 1`] = `
<div>
  <span
    aria-label="right"
    class="anticon anticon-right rac-summary-separator"
    role="img"
  >
    <svg
      aria-hidden="true"
      data-icon="right"
      fill="currentColor"
      focusable="false"
      height="1em"
      viewBox="64 64 896 896"
      width="1em"
    >
      <path
        d="M765.7 486.8L314.9 134.7A7.97 7.97 0 00302 141v77.3c0 4.9 2.3 9.6 6.1 12.6l360 281.1-360 281.1c-3.9 3-6.1 7.7-6.1 12.6V883c0 6.7 7.7 10.4 12.9 6.3l450.8-352.1a31.96 31.96 0 000-50.4z"
      />
    </svg>
  </span>
</div>
`;

exports[`Testing Summary Components testing Summary should render correctly 1`] = `
<div>
  <div
    class="rac-summary"
  />
</div>
`;
